--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,22 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">Sunshine</string>
 
-    <string name="action_refresh" translatable="false">Refresh</string>
-    <string name="action_settings">Settings</string>
-    <string name="action_map">Map Location</string>
-    <string name="action_share">Share</string>
+    <string name="action_refresh" translatable="false">Actualizar</string>
+    <string name="action_settings">Preferencias</string>
+    <string name="action_map">Mapa</string>
+    <string name="action_share">Compartir</string>
 
-    <string name="title_activity_detail">Details</string>
-    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_detail">Detalles</string>
+    <string name="title_activity_settings">Preferencias</string>
 
     <string name="pref_header_general">General</string>
     <string name="pref_location_key" translatable="false">location</string>
-    <string name="pref_location_label">Location</string>
+    <string name="pref_location_label">Localidad</string>
     <string name="pref_location_default" translatable="false">Montevideo, UY</string>
     <string name="pref_units_key" translatable="false">units</string>
-    <string name="pref_units_label">Units</string>
-    <string name="pref_units_title">Temperature Units</string>
-    <string name="pref_units_label_metric">Metric</string>
+    <string name="pref_units_label">Unidades</string>
+    <string name="pref_units_title">Unidades de temperatura</string>
+    <string name="pref_units_label_metric">Métrica</string>
     <string name="pref_units_label_imperial">Imperial</string>
     <string name="pref_units_label_kelvin">Kelvin</string>
     <string name="pref_units_metric">metric</string>
@@ -57,4 +57,16 @@
     <!-- SyncAdapter related -->
     <string name="sync_account_type">sunshine.lulisoft.com</string>
     <string name="content_authority">com.lulisoft.sunshine</string>
+
+    <!-- Notification Format -->
+    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
+    <!-- Strings related to Notification preference -->
+    <string name="pref_last_notification">last_notification</string>
+
+    <!-- Strings related to Notification Enabled preference -->
+    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
+    <string name="pref_enable_notifications_label">Notificaciones de clima</string>
+    <string name="pref_enable_notifications_true">Habilitadas</string>
+    <string name="pref_enable_notifications_false">Deshabilitadas</string>
+    <string name="pref_enable_notifications_default" translatable="false">true</string>
 </resources>
